<resources>
    <string name="app_name">Question 2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="c_discord">C: Discord</string>
    <string name="a_chaos">A: Chaos</string>
    <string name="b_trouble">B: Trouble</string>
    <string name="d_mania">D: Mania</string>
    <string name="quot_straddle_the_line_in_and_rhyme_i_m_on_the_hunt_i_m_after_you_mouth_is_alive_with_juices_like_wine_and_i_m_hungry_like_the_wolf_quot">\"Straddle the line in _______ and rhyme, I\'m on the hunt, I\'m after you, Mouth is alive with juices like wine, And I\'m hungry like the wolf.\"</string>
    <string name="guess_the_missing_lyric">Guess the missing lyric!</string>
    <string name="want_a_hint_costs_100_points">Want a hint? Costs 100 points.</string>
</resources>
